name:                game
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable game
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base ==4.9.*
                     , gloss ==1.11.*
                     , gloss-juicy ==0.2.2
